--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello how are you<br>
-        WEllCOME
-    </h1>
+    <div>
+    <div>
+        <h1>Abisai</h1>
+    </div>
+    <div>
+       <h1>content section</h1>
+    </div>
+    <h4>copyright 2026 All rights reserved</h4>
+    </div>
     
 </body>
 </html>
