--- a/index.html
+++ b/index.html
@@ -2,20 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-    <div>
+    <header>
         <h1>Abisai</h1>
-    </div>
-    <div>
-       <h1>content section</h1>
-    </div>
-    <h4>copyright 2026 All rights reserved</h4>
-    </div>
-    
+    </header>
+
+    <section class="container">
+        
+        <div class="text">
+            <h2>Abi sai</h2>
+            <p>
+                I am a computer science professional with experience in 
+                teaching, research, and software development. 
+                Passionate about technology and learning.
+            </p>
+        </div>
+
+        <div class="image">
+            <img src="C:\Users\matet\OneDrive\Desktop\ABISAI-123.github.io\IMG_20250227_192724_693[1].jpg" alt="Working person">
+        </div>
+
+    </section>
+    <footer>
+        <p>2026 All rights reserved</p>
+    </footer>
+
 </body>
 </html>
