--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         
         <div class="text">
             <h2>Abi sai</h2>
+            <div class="container">
+                <ul>
+                    <li>HOME</li>
+                    <li>ABOUT</li>
+                    <li>SERVICES</li>
+                    <li>PROJECT</li>
+                    <li>Skill</li>
+                </ul>
+
+            </div>
             <p>
                 I am a computer science professional with experience in 
                 teaching, research, and software development. 
@@ -21,7 +31,7 @@
         </div>
 
         <div class="image">
-            <img src="C:\Users\matet\OneDrive\Desktop\ABISAI-123.github.io\IMG_20250227_192724_693[1].jpg" alt="Working person">
+            <img src="C:\Users\matet\OneDrive\Desktop\ABISAI-123.github.io\IMG_20250227_192724_693[1].jpg" alt="error ">
         </div>
 
     </section>
