--- a/index.html
+++ b/index.html
@@ -1,43 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Abisai</h1>
-    </header>
-
-    <section class="container">
-        
-        <div class="text">
-            <h2>Abi sai</h2>
-            <div class="container">
-                <ul>
-                    <li>HOME</li>
-                    <li>ABOUT</li>
-                    <li>SERVICES</li>
-                    <li>PROJECT</li>
-                    <li>Skill</li>
-                </ul>
-
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Praveen Nair</h1>
+        <div>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <div id="home" style="display: flex">
+          <div>
+            <h1>Praveen Nair</h1>
             <p>
-                I am a computer science professional with experience in 
-                teaching, research, and software development. 
-                Passionate about technology and learning.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              assumenda fugit delectus deleniti aliquid, beatae odit pariatur
+              animi quae eligendi praesentium qui itaque! Consequatur asperiores
+              praesentium beatae neque ratione ab.
             </p>
+          </div>
+
+          <div>
+            <img src="officedesk.jpg" alt="Profile pic" width="300px" />
+          </div>
         </div>
 
-        <div class="image">
-            <img src="C:\Users\matet\OneDrive\Desktop\ABISAI-123.github.io\IMG_20250227_192724_693[1].jpg" alt="error ">
+        <div id="services" style="display: flex;color: black; background-color:white;justify-content: space-around;">
+          <div class="box">
+            <h3>Mobile App Development</h3>
+             <img src="https://picsum.photos/id/3/300/300" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, cum.</p>
+          </div>
+          <div class="box">
+            <h3>Frontend Development</h3>
+            <img src="https://picsum.photos/id/1/300/300" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+          
+          </div>
+          <div class="box">
+            <h3>Backend Development</h3>
+             <img src="https://picsum.photos/id/5/300/300" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quia.</p>
+          </div>
         </div>
 
-    </section>
-    <footer>
-        <p>2026 All rights reserved</p>
-    </footer>
+        <div id="projects"></div>
 
-</body>
+        <div id="skills"></div>
+
+        <div id="about"></div>
+
+        <div id="contact"></div>
+      </div>
+
+      <div class="footer">Copyright 2025. All rights reserved.</div>
+    </div>
+  </body>
 </html>
