--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             <h1>ABISAI</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              assumenda fugit delectus deleniti aliquid, beatae odit pariatur
-              animi quae eligendi praesentium qui itaque! Consequatur asperiores
-              praesentium beatae neque ratione ab.
+              assumenda fugit delectus deleniti aliquid, beatae odit ab.
             </p>
           </div>
 
