--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <li><a href="#">Projects</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -32,7 +31,7 @@
           </div>
 
           <div>
-            <img src="IMG_20250227_192724_693[1].jpg" alt="Profile pic" width="300px" />
+            <img src="IMG_20250227_192724_693[1].jpg" alt="Profile pic" width="340px" />
           </div>
         </div>
 
@@ -40,18 +39,18 @@
           <div class="box">
             <h3>Mobile App Development</h3>
              <img src="https://picsum.photos/id/3/300/300" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, cum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="box">
             <h3>Frontend Development</h3>
             <img src="https://picsum.photos/id/1/300/300" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           
           </div>
           <div class="box">
             <h3>Backend Development</h3>
              <img src="https://picsum.photos/id/5/300/300" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quia.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
 
@@ -64,7 +63,7 @@
         <div id="contact"></div>
       </div>
 
-      <div class="footer">Copyright 2025. All rights reserved.</div>
+      <div class="footer">Copyright 2026. All rights reserved.</div>
     </div>
   </body>
 </html>
